@@ -6,13 +6,17 @@ import edu.icet.entity.supplier.SupplierEntity;
 import edu.icet.repository.customer.UserRepository;
 import edu.icet.repository.supplier.SupplierRepository;
 import edu.icet.service.supplier.SupplierService;
-import edu.icet.util.SupplierCategoryType;
+import edu.icet.service.system.CategoryService;
+import edu.icet.util.CategoryType;
+
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.context.annotation.Primary;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
 @Primary
@@ -32,15 +36,33 @@ public class SupplierServiceImpl implements SupplierService {
     }
 
     @Override
-    public List<Supplier> getSupplierByCategory(SupplierCategoryType category) {
-        return getAllSuppliers().stream().filter(supplier -> supplier.getCategory() == category).toList();
+    public List<Supplier> getByCategory(String category) {
+        if (category == null || category.isBlank()) {
+            throw new IllegalArgumentException("Category name cannot be null or blank");
+        }
+        CategoryType categoryEnum = CategoryType.valueOf(category.toUpperCase());
+
+        return repository.findAllByCategory(categoryEnum)
+                .stream()
+                .map(supplierEntity -> mapper.map(supplierEntity, Supplier.class))
+                .collect(Collectors.toList());
     }
 
     @Override
     public Supplier searchSupplier(Long id) {
         SupplierEntity supplierEntity = supplierRepository.findById(id).orElse(null);
 
+        if (repository.existsByContactNumber(supplier.getContactNumber())) {
+            throw new IllegalArgumentException("phone number is already exists");
+        }
+
+        if (repository.existsByBusinessName(supplier.getBusinessName())){
+            throw new IllegalArgumentException("Business name is already exists");
+        }
+
+        repository.save(mapper.map(supplier, SupplierEntity.class));
         return supplierEntity != null ? mapper.map(supplierEntity, Supplier.class) : null;
+
     }
 
     @Override
